# container-health-exporter

./: README.md  ROADMAP.md  pyproject.toml
builder/: Dockerfile  README.md  build_deb.bash  copy_deb_entrypoint.bash
debian/: changelog  control  install
src/container_health_exporter/: main.py
test_composed/: docker-compose.yaml
test_composed/image/: Dockerfile  entrypoint.fish  healthcheck_healthy.fish  healthcheck_toggling.fish  healthcheck_unhealthy.fish
