[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "container-health-exporter"
version = "0.7.0"
authors = [
  { name="Ilya Vassyutovich", email="me@iv.link" },
]
description = "Package, package, package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
  "docker >= 7.1.0, < 8",
  "prometheus_client >= 0.20, < 0.21"
]

[project.urls]
Homepage = "https://github.com/IlyaVassyutovich/container-health-exporter"
Issues = "https://github.com/IlyaVassyutovich/container-health-exporter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/container_health_exporter"]

[project.scripts]
che = "container_health_exporter:main.print_containers_metrics"
